--- a/package.json
+++ b/package.json
@@ -68,11 +68,16 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.17.0",
+		"bcrypt": "^5.0.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
+		"draft-js": "^0.11.7",
 		"express": "^4.17.2",
 		"helmet": "^5.0.2",
+		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
-		"pg": "^8.7.3"
+		"pg": "^8.7.3",
+		"react-draft-wysiwyg": "^1.14.7"
 	},
 	"engines": {
 		"node": "^12 || ^14 || ^16",
