--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"lint:fix": "npm run lint:eslint -- --fix && npm run lint:prettier -- --write",
 		"lint:prettier": "prettier ."
 	},
+	"proxy":"http://localhost:3100",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/textbook/starter-kit.git"
@@ -69,8 +70,11 @@
 	"dependencies": {
 		"@babel/runtime": "^7.17.0",
 		"bcrypt": "^5.0.1",
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
+		"dompurify": "^2.3.6",
 		"dotenv": "^16.0.0",
+		"draft-convert": "^2.1.12",
 		"draft-js": "^0.11.7",
 		"express": "^4.17.2",
 		"helmet": "^5.0.2",
