Login/register debugging

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"lint:fix": "npm run lint:eslint -- --fix && npm run lint:prettier -- --write",
 		"lint:prettier": "prettier ."
 	},
-	"proxy":"http://localhost:3100",
+	"proxy": "http://localhost:3100",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/textbook/starter-kit.git"
@@ -69,6 +69,7 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.17.0",
+		"@reduxjs/toolkit": "^1.8.1",
 		"bcrypt": "^5.0.1",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
@@ -81,7 +82,9 @@
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.3",
-		"react-draft-wysiwyg": "^1.14.7"
+		"react-draft-wysiwyg": "^1.14.7",
+		"react-redux": "^8.0.1",
+		"redux": "^4.2.0"
 	},
 	"engines": {
 		"node": "^12 || ^14 || ^16",
