--- a/package.json
+++ b/package.json
@@ -76,13 +76,12 @@
 		"dompurify": "^2.3.6",
 		"dotenv": "^16.0.0",
 		"draft-convert": "^2.1.12",
-		"draft-js": "^0.11.7",
 		"express": "^4.17.2",
 		"helmet": "^5.0.2",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.3",
-		"react-draft-wysiwyg": "^1.14.7",
+		"react-quill": "^1.3.5",
 		"react-redux": "^8.0.1",
 		"redux": "^4.2.0"
 	},
