--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
 		"redux": "^4.2.0"
 	},
 	"engines": {
-		"node": "^12 || ^14 || ^16",
-		"npm": "^6 || ^7 || ^8"
+		"node": "^14",
+		"npm": "^6"
 	}
 }
