--- a/package.json
+++ b/package.json
@@ -56,9 +56,6 @@
 		"nodemon": "^2.0.14",
 		"prettier": "^2.5.1",
 		"prop-types": "^15.8.1",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"react-router-dom": "^6.2.1",
 		"rimraf": "^3.0.2",
 		"style-loader": "^3.3.1",
 		"wait-on": "^6.0.0",
@@ -85,7 +82,10 @@
 		"pg": "^8.7.3",
 		"react-quill": "^1.3.5",
 		"react-redux": "^8.0.1",
-		"redux": "^4.2.0"
+		"redux": "^4.2.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-router-dom": "^6.2.1"
 	},
 	"engines": {
 		"node": "^14",
