--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DATABASE_URL=postgres://tirexfrzuemcoc:8e812c93a6d0f46a996dd330649db677d279be71e
 
 
 API_URL=http://localhost:3100/api
+
+JWT_SECRET=erjrjjrjrnnggngngllrlldkssmsgavvdkxlzpeped
