--- a/package.json
+++ b/package.json
@@ -80,12 +80,12 @@
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.3",
-		"react-quill": "^1.3.5",
-		"react-redux": "^8.0.1",
-		"redux": "^4.2.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-router-dom": "^6.2.1"
+		"react-quill": "^1.3.5",
+		"react-redux": "^8.0.1",
+		"react-router-dom": "^6.2.1",
+		"redux": "^4.2.0"
 	},
 	"engines": {
 		"node": "^14",
