--- a/package.json
+++ b/package.json
@@ -77,11 +77,13 @@
 		"draft-convert": "^2.1.12",
 		"express": "^4.17.2",
 		"helmet": "^5.0.2",
+		"js-cookie": "^3.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-jwt": "^1.1.6",
 		"react-quill": "^1.3.5",
 		"react-redux": "^8.0.1",
 		"react-router-dom": "^6.2.1",
